--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
       rel="stylesheet"
     />
     <!-- Google tag (gtag.js) -->
-    
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-0TT2E2YNK3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-0TT2E2YNK3");
+    </script>
+
     <title>Antaranga Dot Com Ltd.</title>
   </head>
   <body>
